--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Rick and Morty API</title>
 		<link rel="stylesheet" href="styles.css">
+		<script src="script.js" defer></script>
 		<!-- Bootstrap CSS v5.2.1 -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
